--- a/_posts/2021-03-10-블로그-작성-가이드.md
+++ b/_posts/2021-03-10-블로그-작성-가이드.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  블로그 작성 가이드
+excerpt: 블로그 작성할 때 유의사항
 date:   2021-03-10
 categories: [Tutorial]
 comments: false
@@ -34,6 +35,7 @@ Github.io 블로그를 만들어야겠다는 생각은 오래전부터 있었으
 ---
 layout:		post
 title:		title
+excerpt:	exerpt
 date:		yyyy-mm-dd
 categories:	[category1, category2, ...]
 comments: false
@@ -42,7 +44,8 @@ comments: false
 
 특히 `cateogories` 항목을 잘 채워넣어야 나중에 포스팅 분류할 때 편하게 정리할 수 있다.
 
-
+`excerpt` 를 작성하면 메인 화면에서 본문 대신 해당 내용을 보여준다. 
+해당 post를 설명하는 내용을 작성한다.
 
 ### 2. 수식 작성
 
