--- a/_posts/2021-03-10-블로그-작성-가이드.md
+++ b/_posts/2021-03-10-블로그-작성-가이드.md
@@ -47,6 +47,8 @@ comments: false
 `excerpt` 를 작성하면 메인 화면에서 본문 대신 해당 내용을 보여준다. 
 해당 post를 설명하는 내용을 작성한다.
 
+
+
 ### 2. 수식 작성
 
 수식 작성 할 때 `$$x = 1 $$` 와 같이 `$` 기호를 두 개씩 붙여서 감싸줘야 제대로 인식한다.
@@ -59,13 +61,21 @@ comments: false
 
 
 
+## Layout / Style 수정
+
+스타일 수정은 `_sass/pages/` 폴더의 `_layout.scss` 또는  `_post.scss`  파일을 수정하면 된다.
+
+페이지 레이아웃은 `_layouts/`  폴더 참고
+
+
+
 ## To Do
 
 ### Layout
 
 Sidebar 크기 줄이기
 
-본문 가로 길이 줄이기
+~~본문 가로 길이 줄이기~~
 
 아이콘 바꾸기
 
@@ -77,4 +87,6 @@ Sidebar 크기 줄이기
 
 네이버 블로그 포스팅 가져오기
 
-Sample post 삭제
+어느정도 익숙해지면 Sample post 삭제
+
+메인 화면 페이지 (home) 만들지 고민
