--- a/_posts/2021-03-10-블로그-작성-가이드.md
+++ b/_posts/2021-03-10-블로그-작성-가이드.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  블로그 작성 가이드
+title:  Github.io blog guideline
 excerpt: 블로그 작성할 때 유의사항
 date:   2021-03-10
 categories: [Tutorial]
