--- a/_posts/2021-03-10-블로그-작성-가이드.md
+++ b/_posts/2021-03-10-블로그-작성-가이드.md
@@ -67,6 +67,10 @@ comments: false
 
 페이지 레이아웃은 `_layouts/`  폴더 참고
 
+[Resume](https://daehyun-bae.github.io/resume) : 데이터는 `_data/index`, 레이아웃은 `_includes/sections` 에서 수정
+
+[Tags](https://daehyun-bae.github.io/tags) : [Categories](https://daehyun-bae.github.io/categories) 탭과 큰 차이점은 잘 모르겠지만 태그를 사용하고 싶으면 메타데이터 정보를 작성할 때 `tags: tag1 `와 같이 태그 정보를 입려해주면 된다.
+
 
 
 ## To Do
@@ -77,9 +81,9 @@ Sidebar 크기 줄이기
 
 ~~본문 가로 길이 줄이기~~
 
-아이콘 바꾸기
+~~아이콘 바꾸기~~
 
-폰트 (크기, 스타일)
+~~폰트 (크기, 스타일)~~
 
 
 
@@ -89,4 +93,6 @@ Sidebar 크기 줄이기
 
 어느정도 익숙해지면 Sample post 삭제
 
-메인 화면 페이지 (home) 만들지 고민
+~~메인 화면 페이지 (home) 만들지 고민~~ &rarr; 일단은 생략
+
+~~Resume 채우기~~
