--- a/_posts/2022-01-01-1년차-개발자-회고.md
+++ b/_posts/2022-01-01-1년차-개발자-회고.md
@@ -4,8 +4,8 @@ title:  개발자 1년차 회고록
 excerpt: 2021을 되돌아보는 새해 첫 블로그
 date:   2022-01-01
 categories: [Posting]
+tags: [Dairy, Retrorespective]
 comments: false
-
 ---
 
 # 개발자 1년차 회고록
@@ -116,7 +116,7 @@ comments: false
 
 ### 부동산
 
-처음으로 청약을 넣어봤는데 덜컥 당첨이 되었다. 재당첨 제한이나 그런 제약사항이 없는 오피스텔이라 경험 삼아 넣어봤는데 당첨이 된 것이다. 하지만 당장 여유 자금도 없고 직접 실거주하기에도 너무 멀어서 계약은 포기했다. 내년엔 시드머니가 어느 정도 모이면 작게라도 투자할 수 있도록 공부를 해야겠다.
+처음으로 청약을 넣어봤는데 덜컥 당첨이 되었다. 재당첨 제한이나 그런 제약사항이 없는 오피스텔이라 경험 삼아 넣어봤는데 당첨이 된 것이다. 하지만 당장 여유 자금도 없고 직접 실거주하기에도 회사와 너무 멀어서 계약은 포기했다. 내년엔 시드머니가 어느 정도 모이면 작게라도 투자할 수 있도록 공부를 해야겠다.
 
 
 
@@ -128,10 +128,28 @@ comments: false
 
    단순히 컨트랙트 작성만 하는게 아니라 블록체인 생태계에 대한 전반적인 지식이 너무 부족했다. 생긴지 얼마 안된 기술인 만큼 빠르게 새로운 컨셉의 디파이 서비스들이 생겨나고 있다. 다른 디파이 서비스들의 토크노믹스는 어떤지, 컨트랙트 구현은 어떻게 했는지 등 공부하는 시간을 가져야겠다.
 
+   * 유니스왑, CRV, AAVE 등 디파이 서비스 white paper 정주행
+   * Zero-knowledge 기술 공부 (컨셉, 탄생 배경 등)
+   * 그 외 다양한 토크노믹스 간단하게라도 정리해서 포스팅하기
+
 2. 자기개발
 
-   회사 근처로 이사가면 그동안 출퇴근에 소모되던 시간을 아낄 수 있다. 그 시간동안 업무 외적으로 자기만족을 위한 자기 개발을 하고싶다. 지금 드는 생각은 보컬 트레이닝 학원 다니면서 컴플렉스였던 노래 실력을 좀 향상 시키고 싶다. 꾸준히 그림 그리면서 웹툰이나 이모티콘 출품해보기 등도 해보고 싶다.
+   * 보컬트레이닝
+   * 웹툰 그리기
+   * 이모티콘 만들기
+   * 코인 트레이딩 봇 만들기
+   * 블로그 포스팅 (주 1회?)
+   * 운동 (헬스, 골프, 탁구, ...)
 
-3. 인간관계 챙기기
+3. 인간관계
 
-   그동안 연구실에 있을 땐 연구하랴, 올해는 회사에 적응하랴 거의 집-회사만 왔다갔다하면서 사람들을 많이 못 만나고 다녔다. 오랫동안 못봤던 친구들도 만나고 회사 사람들과 좀 친해지면서 인간 관계를 넓히고 싶다.
+   그동안 연구실에 있을 땐 연구하랴, 올해는 회사에 적응하랴 거의 집-회사만 왔다갔다하면서 사람들을 많이 못 만나고 다녔다. 오랫동안 못 봤던 친구들도 만나고 회사 사람들과도 친해지면서 인간 관계를 넓히고 싶다.
+
+   * 웬만하면 카톡 선물로라도 생일 선물 챙겨주기
+   * 먼저 만나자고 연락하기
+
+4. 재테크
+   * 부동산 관련 서적 10권이상 읽기
+     * 작은 갭투자 도전? (under 5,000)
+   * 단타 금지, 위험한 코인 사지 않기
+   * 주식 수익률 20%
