--- a/_posts/2022-04-23-[오브젝트]-TIL01.md
+++ b/_posts/2022-04-23-[오브젝트]-TIL01.md
@@ -3,7 +3,7 @@ layout: post
 title:  "[오브젝트] - TIL01: 객체지향 프로그래밍이란 무엇인가"
 excerpt: 객체지향 프로그래밍이란 무엇인가
 date:   2022-04-23
-categories: [Development]
+categories: [Development, Book]
 tags: [Book, Dev]
 comments: false
 ---
